--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "conjugador",
   "version": "0.0.1",
-  "description": "Um conjugador de verbos da lingua portuguesa.",
+  "description": "Um conjugador de verbos da língua portuguesa.",
   "main": "src/conjugador.js",
   "repository": {
     "type": "git",
