fixes some bugs in bower.json

--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,10 @@
   },
   "ignore": [
     ".editorconfig",
-    ".gitignore"
+    ".gitignore",
     ".npmignore",
-    "package.json"
-    "src/conjugador.js"
+    "package.json",
+    "src/conjugador.js",
     "src/irregulares.json"
   ],
   "authors": [{
