--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "conjugador",
   "version": "0.0.4",
-  "description": "Um conjugador de verbos da língua portuguesa.",
+  "description": "Conjugue verbos da língua portuguesa no presente do indicativo.",
   "main": "dist/conjugador.js",
   "repository": {
     "type": "git",
