--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "conjugador",
   "version": "0.1.0",
   "description": "Um conjugador de verbos da língua portuguesa.",
-  "main": "dist/conjugador.js",
+  "main": "dist/conjugador.min.js",
   "repository": "theuves/conjugador",
   "ignore": [
     "src/",
