--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.1",
   "description": "Um conjugador de verbos da língua portuguesa.",
   "main": "build/conjugador.min.js",
+  "files": [
+    "dist"
+  ],
   "repository": "theuves/conjugador",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
     "test": "jasmine test/**/*.js"
   },
   "author": "Matheus Alves",
   "license": "MIT",
   "devDependencies": {
     "jasmine": "^3.1.0",
-    "webpack": "^3.11.0"
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.27.1"
   }
 }
