--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "jasmine": "^3.1.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.27.1"
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.2.0"
   }
 }
